portfolio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: porfolio-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: porfolio-server
  template:
    metadata:
      labels:
        app: porfolio-server
    spec:
      containers:
      - name: porfolio-server
        image: ghcr.io/whattheearl/porfolio:0.0.2
        ports:
        - containerPort: 80
